<resources>
    <!--&#160; : 공백-->

    <!--기본 앱 관련-->
    <string name="app_name">CERT-IS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="toolbar_title">CERT-IS</string>

    <!--로그인 액티비티 관련-->
    <string name="userID">ID</string>
    <string name="userPW">Password</string>
    <string name="forgetPW">Forget Password</string>
    <string name="signIn">Sign In</string>
    <string name="accountQuery">"Don't have an account?"</string>
    <string name="signUp">&#160;Sign Up!</string>

    <!--URL 관련-->
    <string name="certis_api_url">http://api.cert-is.ga/v1/authenticate</string>
    <string name="certis_test_url">http://api.cert-is.ga/v1/notices</string>
    <string name="certis_test_add_request_url">http://api.cert-is.ga/v1/notices?page=</string>
    <string name="certis_api_image_host_url">http://api.cert-is.ga</string>

    <!--플로팅액션버튼-->
    <string name="fab_writing">글쓰기</string>
    <string name="fab_search_property">글찾기</string>


    <!--네비게이션드로어 관련-->
    <string name="closeDrawer">Navigation View Closed</string>
    <string name="openDrawer">Navigation View Opened</string>

    <!--<string name="sub_header_notice">공지사항</string>-->
    <string name="sub_notice">공지사항</string>
    <string name="sub_minutes">회의록</string>
    <string name="sub_link_board">링크 게시판</string>
    <string name="sub_calender">캘린더</string>
    <!--<string name="sub_header_about">About</string>-->
    <string name="sub_about">동아리 소개</string>
    <!--<string name="sub_header_data">자료실</string>-->
    <string name="sub_gallery">갤러리</string>
    <string name="sub_data_board">자료 게시판</string>
    <!--<string name="sub_header_free_board">자유 게시판</string>-->
    <string name="sub_free_board">자유 게시판</string>
    <!--<string name="sub_header_book">도서 관련</string>-->
    <string name="sub_book">도서</string>
    <!--<string name="sub_header_team_project">팀 프로젝트</string>-->
    <string name="sub_team_project">팀 프로젝트</string>

    <!-- 게시판 액티비티 관련-->
    <string name="notice">공지사항</string>
    <string name="writing">글쓰기</string>
    <string name="search_writing">글찾기</string>

    <!--글쓰기 액티비티 관련-->
    <string name="attachment">첨부</string>
    <string name="done">완료</string>

    <!--회원가입 액티비티 관련-->
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_name">이름 (실명)</string>
    <string name="sign_up_id">ID</string>
    <string name="sign_up_email">E-mail (로그인 할 때 사용)</string>
    <string name="sign_up_pw">PassWord</string>
    <string name="sign_up_confirm_pw">Confirm PassWord</string>
    <string name="sign_up_phone_number">Phone Number</string>

    <!--링크 글쓰기 관련-->
    <string name="link_write_title">사이트 명</string>
    <string name="link_write_content">사이트 소개 및 한마디</string>

    <!--팀프로젝트 글쓰기 관련-->
    <string name="timpro_write_title">제목</string>
    <string name="timpro_write_membername">내용</string>
    <string name="timpro_write_content">팀원 이름</string>

    <!--갤러리 글쓰기 관련-->
    <string name="gallery_write_title">제목</string>
    <string name="gallery_write_content">내용</string>

</resources>

