<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NavigationDrawerActivity">

    <!--공지사항(그룹으로 설정할 때)-->
    <!--<group android:checkableBehavior="single">-->
        <!--<item-->
            <!--android:id="@+id/sub_header_notice"-->
            <!--android:title="@string/sub_header_notice">-->
            <!--<menu>-->
                <!--&lt;!&ndash; Menu items go here &ndash;&gt;-->
                <!--<item-->
                    <!--android:id="@+id/sub_item_notice"-->
                    <!--android:title="@string/sub_notice" />-->
                <!--&lt;!&ndash;android:icon="@drawable/menu"&ndash;&gt;-->
                <!--<item-->
                    <!--android:id="@+id/sub_item_minutes"-->
                    <!--android:title="@string/sub_minutes" />-->
                <!--<item-->
                    <!--android:id="@+id/sub_item_link_board"-->
                    <!--android:title="@string/sub_link_board" />-->
                <!--<item-->
                    <!--android:id="@+id/sub_item_calender"-->
                    <!--android:title="@string/sub_calender" />-->
            <!--</menu>-->
        <!--</item>-->
    <!--</group>-->

    <!-- Menu items go here -->
    <item
        android:id="@+id/sub_item_notice"
        android:title="@string/sub_notice" />
    <!--android:icon="@drawable/menu"-->
    <item
        android:id="@+id/sub_item_minutes"
        android:title="@string/sub_minutes" />
    <item
        android:id="@+id/sub_item_link_board"
        android:title="@string/sub_link_board" />
    <item
        android:id="@+id/sub_item_calender"
        android:title="@string/sub_calender" />
    <item
        android:id="@+id/sub_item_about"
        android:title="@string/sub_about" />
    <item
        android:id="@+id/sub_item_gallery"
        android:title="@string/sub_gallery" />
    <item
        android:id="@+id/sub_item_data_board"
        android:title="@string/sub_data_board" />
    <item
        android:id="@+id/sub_item_free_board"
        android:title="@string/sub_free_board" />
    <item
        android:id="@+id/sub_item_book"
        android:title="@string/sub_book" />
    <item
        android:id="@+id/sub_item_team_project"
        android:title="@string/sub_team_project" />
</menu>