<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/opacitylogo"
    android:gravity="top|center"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingTop="112dp"
    tools:context="com.certis.SignUpActivity">

    <EditText
        android:id="@+id/SignUpEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sign_up_email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/SignUpId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/sign_up_id" />

    <EditText
        android:id="@+id/SignUpName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sign_up_name" />

    <EditText
        android:id="@+id/SignUpPw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sign_up_pw"
        android:password="true" />

    <EditText
        android:id="@+id/SignUpConfirmPw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sign_up_confirm_pw"
        android:password="true" />


    <EditText
        android:id="@+id/SignUpPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sign_up_phone_number"
        android:inputType="phone"/>


    <Button
        android:id="@+id/SignUpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/main_color"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/ReturnToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Already have an account? Sign In!" />

</LinearLayout>
