<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context="com.certis.LinkWriteActivity">

    <LinearLayout
        android:gravity="center"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/LinkTitleText"
            android:text="Team Project"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/LinkWriteTitle"
            android:hint="@string/timpro_write_title"
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <EditText
            android:id="@+id/LinkWriteAddress"
            android:hint="@string/timpro_write_membername"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <EditText
            android:id="@+id/LinkWriteContent"
            android:hint="@string/timpro_write_content"
            android:layout_width="match_parent"
            android:layout_height="250dp" />

    </LinearLayout>



    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/TimWriteUpload"
            android:background="@drawable/upload"
            android:layout_alignParentRight="true"
            android:layout_width="40dp"
            android:layout_height="50dp" />

    </RelativeLayout>


</LinearLayout>
